apps/backend/tests/unit/snapshots/unit_tests__unit__error_snapshot__access-token-expired-error.snap
---
source: apps/backend/tests/unit/error_snapshot.rs
expression: error_json(err)
---
{
  "error": {
    "code": "ACCESS_TOKEN_EXPIRED",
    "message": "token has expired"
  }
}
