apps/backend/tests/unit/snapshots/unit_tests__unit__error_snapshot__auth-error.snap
---
source: apps/backend/tests/unit/error_snapshot.rs
expression: error_json(err)
---
{
  "error": {
    "code": "AUTH",
    "message": "invalid credentials"
  }
}
