apps/backend/tests/unit/snapshots/unit_tests__unit__error_snapshot__internal-error.snap
---
source: apps/backend/tests/unit/error_snapshot.rs
expression: error_json(err)
---
{
  "error": {
    "code": "INTERNAL",
    "details": {
      "detail": "db connection failed"
    },
    "message": "something went wrong"
  }
}
