apps/backend/tests/unit/snapshots/unit_tests__unit__error_snapshot__not-found-error.snap
---
source: apps/backend/tests/unit/error_snapshot.rs
expression: error_json(err)
---
{
  "error": {
    "code": "NOT_FOUND",
    "message": "user not found"
  }
}
