apps/backend/tests/unit/snapshots/unit_tests__unit__error_snapshot__unauthorized-error.snap
---
source: apps/backend/tests/unit/error_snapshot.rs
expression: error_json(err)
---
{
  "error": {
    "code": "UNAUTHORIZED",
    "message": "Missing VIEW_ANALYTICS permission"
  }
}
